--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-Migrate==4.1.0
 Flask-RESTful==0.3.10
-Flask-SocketIO==5.5.1
+#Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 frozenlist==1.5.0
 gcloud==0.18.3
@@ -46,14 +46,14 @@ platformdirs==4.3.6
 propcache==0.2.1
 proto-plus==1.26.0
 protobuf==5.29.3
-psycopg2-binary==2.9.10
+#psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pyee==11.1.1
 pyinstaller==6.11.1
 pyinstaller-hooks-contrib==2025.0
 pyparsing==3.2.1
-python-dotenv==1.0.1
+#python-dotenv==1.0.1
 python-engineio==4.11.2
 python-socketio==5.12.1
 pytz==2024.2
@@ -76,3 +76,6 @@ Werkzeug==3.1.3
 wsproto==1.2.0
 yarl==1.18.3
 gunicorn==20.1.0
+psycopg2-binary==2.9.9  # Resolves PEP 517 build errors
+flask-socketio==5.3.6
+python-dotenv==1.0.0  # For environment management
