--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,16 @@
 [tool.poetry]
-name = "your_project_name"
+name = "chat_system"
 version = "0.1.0"
-description = "A brief description of your project"
+description = "A chat system using Flask and SocketIO"
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-flask = "^2.0"
-flask-sqlalchemy = "^2.5"
-flask-socketio = "^5.0"
-flask-migrate = "^3.1"
-flask-cors = "^3.0"
+flask = "^2.3.3"
+flask-sqlalchemy = "^2.5.1"
+flask-socketio = "^5.5.1"
+flask-migrate = "^3.1.0"
+flask-cors = "^3.0.10"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
