--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "chat_system"
+name = "socketio_chat_app"
 version = "0.1.0"
 description = "A chat system using Flask and SocketIO"
-authors = ["Your Name <you@example.com>"]
+authors = ["Tejas"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
